edited about and talks page, ccreated post template types

--- a/_layouts/press-index.html
+++ b/_layouts/press-index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-  {% for post in site.categories.essays %}  
+  {% for post in site.categories.press %}  
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
     <hr />
