--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -23,17 +23,18 @@
   </div>
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
     <div class="headline-wrap">
-      <h1 itemprop="headline">{{ page.title }}</h1>
-      <h2>{{ page.tagline }}</h2>
+	  <img src="{{ site.url }}/images/{{ page.image.thumb }}" alt="{{ page.title }}  image" itemprop="primaryImageOfPage">
+	  
+      <a href="{{ page.link }}"><h4>{{ page.title }}</h4></a>
     </div><!--/ .headline-wrap -->
     <div class="article-wrap" itemprop="text">
       {{ content }}
       <hr />
+	  <p class="byline">By <strong>{{ page.byline }}</strong> on <strong> {{ page.pubdate }}</strong> | <a href="{{ page.link }}">[link]</p>
       <footer role="contentinfo">
         <div class="article-author-bottom">
           {% include author-bio.html %}
         </div>
-        <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}" itemprop="dateModified">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %} by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><a href="{{ site.url }}/about" title="About {{ site.owner.name }}" itemprop="url">{{ site.owner.name }}</a></span></span>.</p>
       </footer>
     </div><!-- /.article-wrap -->
   </article>
