--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
   <p>I'm a fan of technology, government, and interesting ideas.</p>
   <p>For over three years, I've been helping run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that technology can change government.</p>
-  <p>I (unsuccessfully) try to write to write things down.</p>
+  <p>I (unsuccessfully) try to write things down.</p>
   <p>When I do, however, I'll post <a href="/articles">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, best just to ask: <a href="http://twitter.com/abhinemani">@abhinemani</a>.</p>
   <a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a><a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>
