--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
   <p>I (unsuccessfully) try to write things down.</p>
   <p>When I do, however, I'll post <a href="/articles">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, best just to ask: <a href="http://twitter.com/abhinemani">@abhinemani</a>.</p>
-  <a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a><a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>
+  <a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>
   <h3>&nbsp;</h3>
   <hr />
   {% for post in site.posts limit:10 %}    
