--- a/_layouts/press-index.html
+++ b/_layouts/press-index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-	<p>If you are looking for insight on the issues of government technology, innovation, or civic engagement, you're welcome to <a href="mailto:abhinemani@gmail.com">drop me a line</a>. Here are some recent comments: </p>
+	<p>If you are looking for insight on the issues of government technology, innovation, or civic engagement, you're welcome to <a href="mailto:abhinemani@gmail.com">drop me a line</a>. Here are some publications I've been quoted in recently; click through the logos for the snippet and link to the full article: </p>
   {% for post in site.categories.press %}  
       <a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}"><img src="{{ site.url }}/images/{{ post.image.thumb }}" alt="{{ page.title }} image" width="100px" style="float: left; margin: 10px;"></a>
   {% endfor %}
