--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
   <a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>
   <h3>&nbsp;</h3>
   <hr />
-  {% for post in site.posts limit:10 %}    
+  {% for post in site.categories.essays limit:10 %}    
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
     <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
     <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
