--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,7 +55,7 @@
 <!-- 32x32 -->
 <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-<link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/favicon.png">
+<link rel="apple-touch-icon-precomposed" href="{{ site.url }}/favicon.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/icon72.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
