--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
   <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }} feature image">
 </div>-->
 
-<div class="article-author-top">
+<div class="article-author-top homepage">
   {% include author-bio.html %}
 </div>
 
@@ -27,15 +27,7 @@
   <p>I (unsuccessfully) try to write things down.</p>
   <p>When I do, however, I'll post <a href="/articles">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, best just to ask: <a href="http://twitter.com/abhinemani">@abhinemani</a>.</p>
-  <a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>
-  <h3>&nbsp;</h3>
-  <hr />
-  {% for post in site.categories.essays limit:10 %}    
-  <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-    <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
-    <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
-  </article>
-  {% endfor %}
+  <!--<a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>-->
 </div><!-- /#index -->
 
 <div class="footer-wrap">
