fixed homepage author box

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,12 @@
   <p>I (unsuccessfully) try to write things down.</p>
   <p>When I do, however, I'll post <a href="/articles">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, best just to ask: <a href="http://twitter.com/abhinemani">@abhinemani</a>.</p>
-  <!--<a href="{{ site.url}}/articles" class="btn btn-small pull-right">View all posts</a>-->
+  <a href="{{ site.url}}/about" class="btn btn-small pull-right">Find out a bit more...</a>
+  <div style="clear:both;"></div>
+  <div class="article-author-bottom">
+    <hr />
+    {% include author-bio.html %}
+  </div>
 </div><!-- /#index -->
 
 <div class="footer-wrap">
