--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -28,14 +28,14 @@
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
   {% for post in site.categories.essays %}  
   {% unless post.next %}
-    <h3>{{ post.date | date: '%Y' }}</h3>
-    <hr />
+   <!--<h3>{{ post.date | date: '%Y' }}</h3>
+    <hr />-->
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
       {% if year != nyear %}
-        <h3>{{ post.date | date: '%Y' }}</h3>
-        <hr />
+        <!--<h3>{{ post.date | date: '%Y' }}</h3>
+        <hr />-->
       {% endif %}
     {% endunless %}
     <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
