--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
   <p>For the past four years, I helped build and run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that technology can change government.</p>
   <p>Beyond that, I've been thinking about things ranging from <a href="http://abhinemani.com/essays/the-obama-campaign-2-0/">political philosophy</a> and <a href="http://abhinemani.com/essays/bowling-alone-and-living-with-others/">civic society</a> to <a href="http://abhinemani.com/designs/essays/code-the-next-chapter-of-american-history/">design</a> and <a href="http://abhinemani.com/press/big-startup-wave/">startups</a>, and I have gotten the opportunity to <a href="http://abhinemani.com/talks/">travel to cities</a> across the country and around the world to learn what public life in the 21st Century looks like &#8212; which makes me excited about what's ahead.</p>
   <p>I (unsuccessfully) try to write things down.</p>
-  <p>When I do, however, I'll post <a href="/articles">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
+  <p>When I do, however, I'll post <a href="/blog">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, just ask: <a href="http://twitter.com/abhinemani">@abhinemani</a> or <a href="mailto:abhi.nemani@gmail.com">abhi.nemani@gmail.com</a>.</p>
   <a href="{{ site.url}}/about" class="btn btn-small pull-right">Find out a bit more...</a>
   <div style="clear:both;"></div>
