--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,8 @@
   <p>For anything else, just ask: <a href="http://twitter.com/abhinemani">@abhinemani</a> or <a href="mailto:abhi.nemani@gmail.com">abhi.nemani@gmail.com</a>.</p>
   <a href="{{ site.url}}/about" class="btn btn-small pull-right">Find out a bit more...</a>
   <div style="clear:both;"></div>
+  <script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@abhinemani">abhi nemani</a>
+  <div style="clear:both;"></div>
   <div class="article-author-bottom">
     <hr />
     {% include author-bio.html %}
