--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,7 @@ h4{font-size:24px;font-size:1.3333333333333333rem;margin-bottom:1.2375rem;text-r
 h5{font-size:21px;font-size:1.1666666666666667rem;margin-bottom:1.4142857142857141rem;text-rendering:optimizeLegibility;line-height:1;margin-top:0;}
 h6{font-size:18px;font-size:1rem;margin-bottom:1.65rem;text-rendering:optimizeLegibility;line-height:1;margin-top:0;}
 p{margin:0 0 1.5em;}p+p{text-indent:1.5em;margin-top:-.5em;}
-#index p{margin-top:-1.5em;}
+#index p+p{margin-top:-1.5em;}
 abbr,acronym,blockquote,code,dir,kbd,listing,plaintext,q,samp,tt,var,xmp{-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;-o-hyphens:none;hyphens:none;}
 pre code{word-wrap:normal;white-space:-moz-pre-wrap;white-space:pre-wrap;}
 pre{white-space:pre;}
