--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@
   <div style="clear:both;"></div>
   <h4>Some recent essays</h4>
   <ul>
-    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4"></a><strong>Building for Both Sides of the Government Counter:</strong> Two Kinds of Empathy</a></li>
-    <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together the Civic Tech Ecosystem</a></li>
+    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4"><strong>Building for Both Sides of the Government Counter:</strong> Two Kinds of Empathy</a></li>
+    <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together Civic Tech</a></li>
     <li><a href="https://medium.com/@abhinemani/ubers-as-ambulances-4e3a2db3880b"><strong>Ubers as Ambulances?</strong> And Other Ideas to Make Consumer Apps More Civic</a></li>
   </ul>
     <a href="http://medium.com/@abhinemani" class="btn btn-small pull-right">Blog</a>
