--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,9 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="{{ site.url }}/assets/js/sheetsee.js"></script>
+<script src="{{ site.url }}/assets/js/tabletop.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"></script>
 <script src="{{ site.url }}/assets/js/main.min.js"></script>
+
+
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
