--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:1
 body{margin:0; border-top: 5px solid #990000;}
 a:focus{outline:thin dotted;}
 a:active,a:hover{outline:0;}
+a.disabled {display: none;}
 h1{font-size:2em;margin:0.67em 0;}
 abbr[title]{border-bottom:1px dotted;}
 b,strong{font-weight:bold;}
