added new press

--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -34,7 +34,7 @@
 		<ul>
 			{{#rows}}
 			<li>
-				{{venue}}, <em><strong>{{title}}</strong></em> <small><a href="{{video}}" class="talk-link" target="_blank">[vid]</a> <a href="{{deck}}" class="talk-link" target="_blank">[deck]</a> </small>
+				{{venue}}, <em><strong>{{title}}</strong></em> <small><a href="{{video}}" class="talk-link" target="_blank">[video]</a> <a href="{{deck}}" class="talk-link" target="_blank">[deck]</a> </small>
 			</li>
 			{{/rows}}
 		</ul>
