--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,8 +23,7 @@
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
   <p>I'm a fan of technology, government, and interesting ideas.</p>
-  <p>I have most recently served as the City of Los Angeles' first Chief Data Officer, where I learned how data and technology can improve the lives of the residents of our second largest city.</p>
-  <p>Before, I helped launch, build, and run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that technology can change government. I've also helped organizations including GovDelivery, OpenGov Foundation, and Significance Labs grow and scale.</p>
+  <p>I have most recently served as the City of Los Angeles' first Chief Data Officer, where I learned how data and technology can improve the lives of the residents of our second largest city. Before, I helped launch, build, and run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that technology can change government.</p>
   <p>Beyond that, I've been thinking about things, ranging from <a href="https://medium.com/@abhinemani/against-citizens-united-c441f9c2708f" target="_blank">political philosophy</a> and <a href="https://medium.com/@abhinemani/on-boston-politics-and-the-arc-of-civic-innovation-be37621f947f" target="_blank">cities</a> to <a href="https://medium.com/@abhinemani/putting-the-law-in-the-palm-of-your-hand-47f5236da7f1" target="_blank">data-driven policy</a> and <a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank">civic tech and startups</a>, and I have gotten the opportunity to <a href="http://abhinemani.com/talks/">travel to cities</a> across the country and around the world to learn what public life in the 21st Century looks like &#8212; which makes me excited about what's ahead.</p>
   <p>I try (my best) to write things down.</p>
   <p>When I do, I'll post <a href="http://medium.com/@abhinemani">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
@@ -39,6 +38,14 @@
   </ul>
     <a href="http://medium.com/@abhinemani" class="btn btn-small pull-right">Blog</a>
   <div style="clear:both;"></div>
+  <h4>Some notable press</h4>
+  
+  {% for post in site.tags.featured %}  
+      <a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}"><img src="{{ site.url }}/images/{{ post.image.thumb }}" alt="{{ page.title }} image" width="100px" style="float: left; margin: 10px;"></a>
+  {% endfor %}
+  <div style="clear:both;"></div>
+  
+  <a href="/press" class="btn btn-small pull-right">More Press Clips</a>
   <div class="article-author-bottom">
     <hr />
     {% include author-bio.html %}
