--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,8 +23,8 @@
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
   <p>I'm a fan of technology, government, and interesting ideas.</p>
-  <p>I have most recently served as the City of Los Angeles' first Chief Data Officer, where I learned how data and technology can improve the lives of the residents of our second largest city. Before, I helped launch, build, and run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that technology can change government.</p>
-  <p>Beyond that, I've been thinking about things, ranging from <a href="https://medium.com/@abhinemani/against-citizens-united-c441f9c2708f" target="_blank">political philosophy</a> and <a href="https://medium.com/@abhinemani/on-boston-politics-and-the-arc-of-civic-innovation-be37621f947f" target="_blank">cities</a> to <a href="https://medium.com/@abhinemani/putting-the-law-in-the-palm-of-your-hand-47f5236da7f1" target="_blank">data-driven policy</a> and <a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank">civic tech and startups</a>, and I have gotten the opportunity to <a href="http://abhinemani.com/talks/">travel to cities</a> across the country and around the world to learn what public life in the 21st Century looks like &#8212; which makes me excited about what's ahead.</p>
+  <p>I have most recently served as the City of Los Angeles' first Chief Data Officer, building technology to improve the lives of the residents of our second largest city. Before, I helped launch, build, and run a non-profit called <a href="http://codeforamerica.org">Code for America</a>, whose interesting idea is that a government of the people, by the people, <em>can</em> work in the 21st Century.</p>
+  <p>Beyond that, I've been thinking about things, ranging from <a href="https://medium.com/@abhinemani/against-citizens-united-c441f9c2708f" target="_blank">political philosophy</a> and <a href="https://medium.com/@abhinemani/on-boston-politics-and-the-arc-of-civic-innovation-be37621f947f" target="_blank">cities</a> to <a href="https://medium.com/@abhinemani/putting-the-law-in-the-palm-of-your-hand-47f5236da7f1" target="_blank">data-driven policy</a> and <a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank">civic tech</a>, and I have gotten the opportunity to <a href="http://abhinemani.com/talks/">travel to around the world</a> to see first-hand how public life everywhere is changing &#8212; which makes me excited about what's ahead.</p>
   <p>I try (my best) to write things down.</p>
   <p>When I do, I'll post <a href="http://medium.com/@abhinemani">them here</a>, along with the standard stuff: <a href="/bio">bio</a>, <a href="/talks">talks</a>, <a href="/press">press mentions</a>, etc.</p>
   <p>For anything else, just ask: <a href="http://twitter.com/abhinemani">@abhinemani</a> or <a href="mailto:abhi.nemani@gmail.com">abhi.nemani@gmail.com</a>.</p>
@@ -32,9 +32,10 @@
   <div style="clear:both;"></div>
   <h4>Some recent essays</h4>
   <ul>
-    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4"><strong>Building for Both Sides of the Government Counter:</strong> Two Kinds of Empathy</a></li>
+    <li><a href="https://medium.com/@abhinemani/open-data-civic-engagement-and-delivery-28b990f321ce"><strong>Open Data, Civic Engagement & Delivery:</strong> Did We Go the Wrong Way?</a></li>
+    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4"><strong>Building for Both Sides of the Counter:</strong> Two Kinds of Empathy</a></li>
     <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together Civic Tech</a></li>
-    <li><a href="https://medium.com/@abhinemani/ubers-as-ambulances-4e3a2db3880b"><strong>Ubers as Ambulances?</strong> And Other Ideas to Make Consumer Apps More Civic</a></li>
+    <li><a href="https://medium.com/@abhinemani/ubers-as-ambulances-4e3a2db3880b"><strong>Ubers as Ambulances?</strong> Ideas to Make Consumer Apps More Civic</a></li>
   </ul>
     <a href="http://medium.com/@abhinemani" class="btn btn-small pull-right">Blog</a>
   <div style="clear:both;"></div>
