added spacing on home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,8 @@
   <div style="clear:both;"></div>
   
   <a href="/press" class="btn btn-small pull-right">More Press Clips</a>
+  <div style="clear:both;"></div>
+  
   <div class="article-author-bottom">
     <hr />
     {% include author-bio.html %}
