--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,7 @@
 <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!--[if (lt IE 9) & (!IEMobile)]>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/ie.css">
 <![endif]-->
