--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -25,7 +25,7 @@
     <div class="headline-wrap">
 	  <img src="{{ site.url }}/images/{{ page.image.thumb }}" alt="{{ page.title }}  image" itemprop="primaryImageOfPage" style="width: 35%; float: right; margin: 1em;">
     <h5 style="text-transform: uppercase; color: gray;">{{ page.publication }}</h5>
-	  <a href="{{ page.link }}"><h4>{{ page.title }}</h4></a>
+	  <a target="_blank" href="{{ page.link }}"><h4>{{ page.title }}</h4></a>
     </div><!--/ .headline-wrap -->
     <div class="article-wrap" itemprop="text">
       {{ content }}
