links on press page

--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -30,7 +30,7 @@
     <div class="article-wrap" itemprop="text">
       {{ content }}
       <hr />
-	  <p class="byline">By <strong>{{ page.byline }}</strong> on <strong> {{ page.pubdate }}</strong> | <a href="{{ page.link }}">[link]</p>
+	  <p class="byline">By <strong>{{ page.byline }}</strong> on <strong> {{ page.pubdate }}</strong> | <a href="{{ page.link }}" target="_blank">[link]</p>
       <footer role="contentinfo">
         <div class="article-author-bottom">
           {% include author-bio.html %}
