--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,12 +32,12 @@
   <div style="clear:both;"></div>
   <h4>Some recent essays</h4>
   <ul>
-    <li><a href="https://medium.com/@abhinemani/open-data-civic-engagement-and-delivery-28b990f321ce"><strong>Open Data, Civic Engagement & Delivery:</strong> Did We Go the Wrong Way?</a></li>
-    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4"><strong>Building for Both Sides of the Counter:</strong> Two Kinds of Empathy</a></li>
-    <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together Civic Tech</a></li>
-    <li><a href="https://medium.com/@abhinemani/ubers-as-ambulances-4e3a2db3880b"><strong>Ubers as Ambulances?</strong> Ideas to Make Consumer Apps More Civic</a></li>
+    <li><a href="https://medium.com/@abhinemani/open-data-civic-engagement-and-delivery-28b990f321ce" target="_blank"><strong>Open Data, Civic Engagement & Delivery:</strong> Did We Go the Wrong Way?</a></li>
+    <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4" target="_blank"><strong>Building for Both Sides of the Counter:</strong> Two Kinds of Empathy</a></li>
+    <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together Civic Tech</a></li>
+    <li><a href="https://medium.com/@abhinemani/ubers-as-ambulances-4e3a2db3880b" target="_blank"><strong>Ubers as Ambulances?</strong> Ideas to Make Consumer Apps More Civic</a></li>
   </ul>
-    <a href="http://medium.com/@abhinemani" class="btn btn-small pull-right">Blog</a>
+    <a href="http://medium.com/@abhinemani" class="btn btn-small pull-right" target="_blank">Blog</a>
   <div style="clear:both;"></div>
   <h4>Some notable press</h4>
   
