changed pic spacing

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
 </div>
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-  <a href="/talks"><img src="/images/abhinemani2.jpg" width="50%" style="margin:0em 0em .5em 1em; float: right;"></a>
+  <a href="/talks"><img src="/images/abhinemani2.jpg" width="50%" style="margin:0em 0em .25em .75em; float: right;"></a>
   <p>I'm a fan of technology, government, and interesting ideas.</p>
   <p>I have most recently served as the <strong>City of Los Angeles' first Chief Data Officer</strong>, <a href="http://github.com/abhinemani" target="_blank">building technology</a> to improve the lives of the residents of our second largest city. Before, I helped launch, build, and run a non-profit called <a href="http://codeforamerica.org"><strong>Code for America</strong></a>, whose interesting idea is that a government of the people, by the people, <em>can</em> work in the 21st Century.</p>
   <p>Beyond that, I've been thinking about things, ranging from <a href="https://medium.com/@abhinemani/against-citizens-united-c441f9c2708f" target="_blank">political philosophy</a> and <a href="https://medium.com/@abhinemani/on-boston-politics-and-the-arc-of-civic-innovation-be37621f947f" target="_blank">cities</a> to <a href="https://medium.com/@abhinemani/putting-the-law-in-the-palm-of-your-hand-47f5236da7f1" target="_blank">data-driven policy</a> and <a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank">civic tech</a>, and I have gotten the opportunity to <a href="http://abhinemani.com/talks/">travel to around the world</a> to see first-hand how public life everywhere is changing &#8212; which makes me excited about what's ahead.</p>
