--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,7 @@
   <div style="clear:both;"></div>
   <h4>Some recent essays</h4>
   <ul>
+    <li><a href="https://medium.com/@abhinemani/government-is-what-you-make-of-it-d836a6a9353d#.r8fss8cbw" target="_blank"><strong>Government is What We Make of it:</strong> Defining Gov 2.0</a></li>
     <li><a href="https://medium.com/@abhinemani/open-data-civic-engagement-and-delivery-28b990f321ce" target="_blank"><strong>Open Data, Civic Engagement & Delivery:</strong> Did We Go the Wrong Way?</a></li>
     <li><a href="https://medium.com/@abhinemani/two-kinds-of-emp-25706bf36df4" target="_blank"><strong>Building for Both Sides of the Counter:</strong> Two Kinds of Empathy</a></li>
     <li><a href="https://medium.com/@abhinemani/small-city-pieces-loosely-joined-5202fb5a93e3" target="_blank"><strong>Small (City) Pieces, Loosely Joined:</strong> Stiching Together Civic Tech</a></li>
