--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -7,7 +7,7 @@
 {% include head.html %}
 </head>
 
-<body class="articles" itemscope itemtype="http://schema.org/WebPage">
+<body class="articles" itemscope itemtype="https://schema.org/WebPage">
 
 {% include chrome-frame.html %}
 
@@ -25,7 +25,7 @@
   {% include author-bio.html %}
 </div>
 
-<div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
+<div id="index" itemprop="mainContentOfPage" itemscope itemtype="https://schema.org/Blog">
 	{{ content }}
 	<div id="photogrid">
 	</div>
