--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
 </div>
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-  <!--a href="/talks"><img src="/images/abhinemani2.jpg" width="50%" style="margin:0em 0em .25em .75em; float: right;"></a>-->
+  <article>
   <p>Hi, my name is <a href="/about"><strong>Abhi Nemani</strong></a>, and I'm a fan of technology, government, and interesting ideas.</p>
   <p>I started my career helping launch, build, and run a non-profit called <a href="http://codeforamerica.org"><strong>Code for America</strong></a>, whose interesting idea is that a government of the people, by the people, <em>can</em> work in the 21st Century.</p>
   <p>After that I worked full-time in local government: first, I served as the <strong>City of Los Angeles' first Chief Data Officer</strong>, <a href="http://github.com/abhinemani" target="_blank">building technology</a> to improve the lives of the residents of our second largest city, and later Mayor Kevin Johnson of Sacramento  appointed me as <a href="http://www.bizjournals.com/sacramento/news/2016/03/16/meet-sacramentos-chief-officer-of-innovation.html" target="_blank"><strong>interim Chief Innovation Officer</strong></a> to build out the city's budding startup sector, through <a href="http://civichall.org/civicist/sacramento-approves-10-million-largest-city-innovation-fund-us/#.V3WiMAPum64.twitter" target="_blank">venture investments, grants, and partnerships</a>. Currently, I run a GovTech consultancy called <a href="http://ethoslabs.us" target="_blank"><strong>EthosLabs</strong></a>, designed to accelerator good government through great technology. I'm helping cities and startups across the country work together at scale and work better for residents.</p> 
@@ -57,6 +57,7 @@
     <hr />
     {% include author-bio.html %}
   </div>
+  </article>
 </div><!-- /#index -->
 
 <div class="footer-wrap">
